# Fly-in

./: .gitignore  AI_NOTES.md  Graph.md  LICENSE  Makefile  Project structure.md  drone_assignment.py  graph.py  hard_level_1_test.map  main.py  models.py  parser.py  pathfinding.py  pyproject.toml  simultion.py  test_script.py  to-do.txt  visualiser.txt  visualize.py
Test_scripts/: Model_test_AI_Generated.py  Models_test.py  model_ai_gen_test.py  parser_test2.py
